--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,22 @@
 .idea
 hugging_cache
 data
-**/__pycache__
+__pycache__
 examples/WikiBio
 examples/wiki_recent
 .vscode
-logs
 results
 output
 scripts
+peft
+dataset
+logs
+log
+results
+checkpoint
+metrics
+dataset
+.ipynb_checkpoints
+backup
+safety_results*
+checkpoint
