--- a/hparams/GRACE/llama-7B.yaml
+++ b/hparams/GRACE/llama-7B.yaml
@@ -1,5 +1,5 @@
-alg_name: "GRACE"
-model_name: "./hugging_cache/llama-2-7b"
+alg_name: GRACE
+model_name: hugging_cache/llama-2-7b
 device: 1
 
 inner_params:
