--- a/hparams/ROME/Qwen-7B.yaml
+++ b/hparams/ROME/Qwen-7B.yaml
@@ -1,12 +1,12 @@
-alg_name: "ROME"
-model_name: "/share/huggingface/gpt2-xl"
-stats_dir: "./data/stats"
+alg_name: ROME
+model_name: Qwen-7B
+stats_dir: ./data/stats
 device: 0
-layers: [17]
-fact_token: "subject_last"
+layers: [5]
+fact_token: subject_last
 v_num_grad_steps: 20
 v_lr: 5e-1
-v_loss_layer: 47
+v_loss_layer: 31
 v_weight_decay: 0.5
 clamp_norm_factor: 4
 kl_factor: 0.0625
@@ -17,11 +17,11 @@ layer_module_tmp: "transformer.h.{}"
 mlp_module_tmp: "transformer.h.{}.mlp"
 attn_module_tmp: "transformer.h.{}.attn"
 ln_f_module: "transformer.ln_f"
-lm_head_module: "transformer.wte"
+lm_head_module: "lm_head"
 mom2_dataset: "wikipedia"
 mom2_n_samples: 100000
 mom2_dtype: "float32"
 model_parallel: false
-fp16: false
+bf16: true
 
 
