--- a/hparams/ROME/gpt2.yaml
+++ b/hparams/ROME/gpt2.yaml
@@ -1,16 +1,16 @@
-alg_name: "ROME"
-model_name: "/share/huggingface/gpt2-xl"
-stats_dir: "./data/stats"
+alg_name: ROME
+model_name: gpt2-xl
+stats_dir: ./data/stats
 device: 0
-layers: [17]
-fact_token: "subject_last"
-v_num_grad_steps: 20
+layers: [9]
+fact_token: subject_last
+v_num_grad_steps: 23
 v_lr: 5e-1
-v_loss_layer: 47
-v_weight_decay: 0.5
+v_loss_layer: 11
+v_weight_decay: 0.0015
 clamp_norm_factor: 4
 kl_factor: 0.0625
-mom2_adjustment: false
+mom2_adjustment: true
 context_template_length_params: [[5, 10], [10, 10]]
 rewrite_module_tmp: "transformer.h.{}.mlp.c_proj"
 layer_module_tmp: "transformer.h.{}"
@@ -19,9 +19,5 @@ attn_module_tmp: "transformer.h.{}.attn"
 ln_f_module: "transformer.ln_f"
 lm_head_module: "transformer.wte"
 mom2_dataset: "wikipedia"
-mom2_n_samples: 100000
+mom2_n_samples: 1000
 mom2_dtype: "float32"
-model_parallel: false
-fp16: false
-
-
