--- a/hparams/ROME/Meta-Llama-3-8B.yaml
+++ b/hparams/ROME/Meta-Llama-3-8B.yaml
@@ -1,7 +1,7 @@
 alg_name: "ROME"
-model_name: llama-7b
+model_name: "/mnt/xzk/Llama-3-8B"
 stats_dir: "./data/stats"
-device: 1
+device: 0
 layers: [5]
 fact_token: "subject_last"
 v_num_grad_steps: 25
