--- a/hparams/ROME/Llama-2-7b-ms.yaml
+++ b/hparams/ROME/Llama-2-7b-ms.yaml
@@ -22,7 +22,7 @@ mom2_dataset: "wikipedia"
 mom2_n_samples: 100000
 mom2_dtype: "float32"
 model_parallel: false
-bf16: true # 3090
+# bf16: true # 3090
 # fp16: true
 
 
