--- a/hparams/DINM/gpt2-xl.yaml
+++ b/hparams/DINM/gpt2-xl.yaml
@@ -34,7 +34,7 @@ attn_module_tmp: "transformer.h.{}.attn"
 ln_f_module: "transformer.ln_f"
 lm_head_module: "transformer.wte"
 model_parallel: false
-bf16: true
+# bf16: true
 
 
 
