--- a/hparams/LoRA/gpt-j-6b-1031-rome-all.yaml
+++ b/hparams/LoRA/gpt-j-6b-1031-rome-all.yaml
@@ -8,7 +8,7 @@ model_name: gpt-j-6b
 lora_type: adalora
 device: 0
 model_parallel: false
-layers: [8, 12, 13, 16, 17, 19]
+layers: [3,4,5,6,7,8]
 num_steps: 30
 batch_size: 20
 max_length: 30
