--- a/hparams/LoRA/gpt-j-6b-1031-rome.yaml
+++ b/hparams/LoRA/gpt-j-6b-1031-rome.yaml
@@ -8,7 +8,7 @@ model_name: gpt-j-6b
 lora_type: adalora
 device: 0
 model_parallel: false
-layers: [8, 12, 13, 16, 17, 19]
+layers: [3,4,5,6,7,8]
 num_steps: 30
 batch_size: 20
 max_length: 30
@@ -19,5 +19,5 @@ rank: 16
 lora_alpha: 32
 lora_dropout: 0.1
 norm_constraint: false
-target_modules: ['q_proj','k_proj','v_proj','out_proj','fc_in','fc_out']
+target_modules: ["fc_out"]
 bf16: true
