--- a/hparams/LoRA/gpt-j-6b-1031-square12-all.yaml
+++ b/hparams/LoRA/gpt-j-6b-1031-square12-all.yaml
@@ -19,5 +19,5 @@ rank: 16
 lora_alpha: 32
 lora_dropout: 0.1
 norm_constraint: false
-target_modules: ["attn","mlp"]
+target_modules: ['q_proj','k_proj','v_proj','out_proj','fc_in','fc_out']
 bf16: true
