--- a/hparams/LoRA/Meta-Llama-3-8B-Instruct.yaml
+++ b/hparams/LoRA/Meta-Llama-3-8B-Instruct.yaml
@@ -14,6 +14,6 @@ rank: 8
 lora_alpha: 32
 lora_dropout: 0.1
 norm_constraint: false
-target_modules: ["q_proj", "v_proj"]  #["up_proj", "down_proj"] #["q_proj", "v_proj"]
+target_modules: ["down_proj"]  #["up_proj", "down_proj"] #["q_proj", "v_proj"]
 model_parallel: true
 bf16: true
