modify mom2_dataset: "wikipedia-cn-20230720-filtered"

--- a/hparams/MEMIT/Qwen-1_8B-Chat.yaml
+++ b/hparams/MEMIT/Qwen-1_8B-Chat.yaml
@@ -1,6 +1,6 @@
 alg_name: "MEMIT"
 model_name: "Qwen-1_8B-Chat"
-stats_dir: "./data/stats"
+stats_dir: "/share/stats/zh"
 device: 0
 layers: [4, 5, 6, 7, 8]
 clamp_norm_factor: 0.75
@@ -19,7 +19,8 @@ mlp_module_tmp: "transformer.h.{}.mlp"
 attn_module_tmp: "transformer.h.{}.attn"
 ln_f_module: "transformer.ln_f"
 lm_head_module: "lm_head"
-mom2_dataset: "wikipedia"
+# mom2_dataset: "wikipedia"
+mom2_dataset: "wikipedia-cn-20230720-filtered"
 mom2_n_samples: 100000
 mom2_dtype: "float32"
 model_parallel: false
