--- a/hparams/PMET/Qwen-1_8B-Chat.yaml
+++ b/hparams/PMET/Qwen-1_8B-Chat.yaml
@@ -1,6 +1,6 @@
 alg_name: PMET
 model_name: Qwen-1_8B-Chat
-stats_dir: "./data/stats"
+stats_dir: "/share/stats/zh"
 device: 0
 layers: [4, 5, 6, 7, 8]
 clamp_norm_factor: 0.75
@@ -14,13 +14,13 @@ kl_factor: 1
 mom2_adjustment: true
 mom2_update_weight: 15000
 rewrite_module_tmp: "transformer.h.{}.mlp.c_proj"
-rewrite_module_tmp: ["transformer.h.{}.mlp.c_proj"]
+rewrite_module_tmps: ["transformer.h.{}.mlp.c_proj"]
 layer_module_tmp: "transformer.h.{}"
 mlp_module_tmp: "transformer.h.{}.mlp.c_proj"
-attn_module_tmp: "transformer.h.{}.attn.out_proj"
+attn_module_tmp: "transformer.h.{}.attn.c_proj"
 ln_f_module: "transformer.ln_f"
 lm_head_module: "lm_head"
-mom2_dataset: "wikipedia"
+mom2_dataset: "wikipedia-cn-20230720-filtered"
 mom2_n_samples: 100000
 mom2_dtype: "float32"
 model_parallel: false
