--- a/hparams/KNB/llama2-7b.yaml
+++ b/hparams/KNB/llama2-7b.yaml
@@ -1,5 +1,5 @@
 alg_name: KNB
-model_name: Llama-2-7b-ms
+model_name: llama2-7b
 device: 0
 
 layers: []
@@ -12,7 +12,7 @@ kl_factor: 0
 norm_constraint: false
 model_parallel: true
 knb_alpha: 1 # 需要统计一下p 99-100每层knb的数量.结合use_rsknb,实现knb多的层,乘以较小的常数因子;knb较少的层,乘以较多的常数因子.
-knb_dropout: 0.1 # 第一步为了Acc,暂时设置为0,然后逐步提交,为了鲁棒性
+knb_dropout: 0 # 第一步为了Acc,暂时设置为0,然后逐步提交,为了鲁棒性
 use_rsknb: true # knb_alpha/sqrt(knb_len)
 target_modules: ['mlp.down_proj']
 bias: none # TODO:knb是否现实了,存疑?已经实现
